fix the project list using flex wrap

--- a/assests/style/index.css
+++ b/assests/style/index.css
@@ -271,17 +271,15 @@ button:hover {
 
 /* content project */
 .project-list {
-  margin: 20px;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .project-list-item {
-  margin: 80px auto;
+  flex: 1 0 30%;
   border: 1px solid black;
+  margin: 1%;
   border-radius: 15px;
-  width: 30%;
-  text-align: center;
-  display: block;
 }
 
 .btn-group button {
